src/scss/main.scss
@import "~normalize.css";

@import "_variables";
@import "modules/hello.scss";
body {
  font-family: muli, sans-serif;

  font-weight: 400;
  letter-spacing: 1px;
  font-style: normal;
}

.nav {
  display: flex;
  width: 100%;
  position: fixed;
  justify-content: flex-end;

  z-index: 5;
  height: 80px;

  &__item {
    padding-right: 3%;
    height: 80px;
    display: flex;
    padding-top: 50px;
    padding-left: 3%;
    margin-top: 2%;
    text-decoration: none;
    list-style: none;
    color: white;
    &:hover {
      background-color: rgba(255, 255, 255, 0.048);
      transform: all 0.3s;
    }

    &__last {
      margin-right: 3%;
    }
  }
}

.slider {
  overflow: hidden;
  position: relative;
  margin: auto;
  width: 100vw;
  height: 100vh;
  &__dot1 {
    position: absolute;
    z-index: 10;
    top: 42%;
    right: 5%;
    font-size: 10px;
    color: white;
  }
  &__dot2 {
    position: absolute;
    z-index: 10;
    top: 46%;
    right: 5%;
    font-size: 10px;
    color: white;
  }
  &__dot3 {
    position: absolute;
    z-index: 10;
    top: 50%;
    right: 5%;
    font-size: 10px;
    color: white;
  }
  &__dot4 {
    position: absolute;
    z-index: 10;
    top: 54%;
    right: 5%;
    font-size: 10px;
    color: white;
  }

  &__bialy {
    position: absolute;
    z-index: 10;
    top: 5%;
    left: 13%;
    width: auto;
    height: auto;
  }
  &__text1 {
    z-index: 10;
    color: white;
    top: 50%;
    left: 20%;
    font-size: 40px;

    position: absolute;
  }
  &__text2 {
    z-index: 10;
    color: rgb(49, 109, 219);
    top: 60%;
    left: 20%;
    font-size: 40px;
    position: absolute;
  }

  $color: rgb(255, 255, 255);

  &__button1 {
    cursor: pointer;
    z-index: 10;
    top: 71%;
    left: 20%;
    position: absolute;
    padding: 0.75rem 1.25rem;
    border-radius: 10rem;
    color: rgb(0, 0, 0);
    text-transform: uppercase;
    padding-top: 15px;
    font-size: 11px;
    letter-spacing: 0.15rem;
    transition: all 0.3s;

    overflow: hidden;

    &:after {
      content: "";
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-color: $color;
      border-radius: 10rem;
      z-index: -2;
    }
    &:before {
      content: "";
      position: absolute;
      bottom: 0;
      left: 0;
      width: 0%;
      height: 100%;
      background-color: darken($color, 15%);
      transition: all 0.3s;
      border-radius: 10rem;
      z-index: -1;
    }
    &:hover {
      color: rgb(0, 0, 0);
      &:before {
        width: 100%;
      }
    }
  }
  &__button2 {
    cursor: pointer;
    padding-left: 2%;
    font-size: 11px;
    z-index: 10;
    top: 71%;
    left: 33%;
    position: absolute;
    padding: 0.75rem 1.25rem;
    border: 1px solid white;
    border-radius: 10rem;
    color: rgb(255, 255, 255);
    text-transform: uppercase;
    padding-top: 15px;
    letter-spacing: 0.1rem;
    transition: all 0.3s;
    background-color: rgba(255, 255, 255, 0);
    overflow: hidden;

    &:after {
      content: "";
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-color: rgb(255, 255, 255);
      opacity: 0;
      border-radius: 10rem;
      z-index: -2;
    }
    &:before {
      content: "";
      position: absolute;
      bottom: 0;
      left: 0;
      width: 0%;
      height: 100%;
      background-color: rgba(124, 124, 124, 0.212);
      transition: all 0.3s;
      border-radius: 10rem;
      z-index: -1;
    }
    &:hover {
      &:before {
        width: 100%;
      }
    }
  }

  &__images {
    display: flex;
    width: 100vw;
    height: 100vh;
    filter: brightness(0.5);
    margin-top: -4%;
  }
}
.navBackground {
  display: flex;
  width: 100%;
  height: 14%;
  z-index: 2;
  position: fixed;
  background-color: rgba(0, 0, 0, 0.486);
}
.buttonNext {
  position: absolute;
  z-index: 8;
  top: 80%;
  left: 14%;
  width: 31px;
  height: 22px;
  color: white;
  cursor: pointer;
}
.buttonBack {
  position: absolute;
  z-index: 8;
  top: 80%;
  left: 11%;
  width: 31px;
  height: 22px;
  color: white;
  cursor: pointer;
}
.main {
  display: grid;
  padding-top: 5%;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: repeat(3, 100vh);
  padding: 10%;
  justify-content: center;
  align-items: center;

  &__text1 {
    grid-column: 1/6;
    grid-row: 1;
    font-size: 18;
    height: 529px;
  }

  &__img1 {
    
    width: 100%;
    box-shadow: 7px 7px 2px #ccc;
    height: auto;
    grid-column: 8/12;
    grid-row: 1;
  }

  &__text2 {
    grid-column: 8/13;
    grid-row: 2;

    height: 529px;
  }

  &__img2 {
    width: 100%;
    height: auto;
    box-shadow: 7px 7px 2px #ccc;
    grid-column: 1/5;
    grid-row: 2;
  }

  &__text3 {
    grid-column: 1/6;
    grid-row: 3;

    height: 529px;
  }
  &__video {
    max-width: 492px;
    width: 100%;
    height: 515px;

    box-shadow: 7px 7px 2px #ccc;

    grid-column: 8/13;
    grid-row: 3;
  }
}
.form{
  background-color: #F5F8FA;
  height: 100vh;
  padding-top: 20%;
  z-index: 1;
  
  // display: grid;
  
  // grid-template-columns: repeat(5, 1fr);
  // grid-template-rows: repeat(12, 1fr);
  // &__name{
  //   grid-column: 2/3;
  //   grid-row: 5;
  // }
  // &__surname{
  //   grid-column: 3/4;
  //   grid-row: 5;
  // }
  // &__email{
  //   grid-column: 3;
  //   grid-row: 6;
  // }
  // &__message{
  //   grid-column: 3;
  //   grid-row: 7;
  // }
  // &__button{
  //   grid-column: 3;
  //   grid-row:8 ;
  //   width: 100px;
  // }
}
.footer {
  display: grid;
  grid-template-columns: repeat(16, 1fr);
  grid-template-rows: repeat(5, 1fr);
  color: white;
  text-decoration: none;
  letter-spacing: 1px;
  background-color: #001927;
  font-size: 14px;

  &__adress {
    grid-column: 3/5;
    grid-row: 2/3;
  }
  &__maps {
    grid-column: 3/4;
    grid-row: 3/5;
  }
  &__list1 {
    list-style-type: none;
    width: 100%;
    grid-row: 2/4;
    grid-column: 5/6;
  }
  &__list2 {
    list-style-type: none;
    width: 100%;
    grid-row: 2/4;
    grid-column: 7/8;
  }
  &__list3 {
    list-style-type: none;
    width: 100%;
    grid-row: 2/4;
    grid-column: 9/10;
  }
  &__list4 {
    list-style-type: none;
    width: 100%;
    grid-row: 2/4;
    grid-column: 11/12;
  }
  &__list5 {
    list-style-type: none;
    width: 100%;
    grid-row: 2/4;
    grid-column: 13/14;
  }
  &__signature {
    grid-column: 12/15;
    grid-row: 4;
  }
}
a:-webkit-any-link {
  color: white;
  cursor: pointer;
  text-decoration: none;
}

@media (max-width:1300px){
  .slider__button2{
    left:45%;

  }
  .slider__bialy{
    left: 5%;
  }
  .buttonNext{
    left:20%;
  }
}




input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
  font-size: 0.75em;
  color: #7B94A5;
  top: -5px;
  -webkit-transition: all 0.225s ease;
  transition: all 0.225s ease;
}

.styled-input {
  float: left;
  width: 293px;
  margin: 1rem 0;
  position: relative;
  border-radius: 4px;
}

@media only screen and (max-width: 768px){
  .styled-input {
      width:100%;
  }
}

.styled-input label {
  color: #7B94A5;
  padding: 1.3rem 30px 1rem 30px;
  position: absolute;
  top: 10px;
  left: 0;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  pointer-events: none;
}

.styled-input.wide { 
  width: 650px;
  max-width: 100%;
}

input,
textarea {
  padding: 30px;
  border: 0;
  width: 100%;
  font-size: 1rem;
  background-color: #ffffff;
  color: white;
  border-radius: 4px;
}

input:focus,
textarea:focus { outline: 0; }

input:focus ~ span,
textarea:focus ~ span {
  width: 100%;
  -webkit-transition: all 0.075s ease;
  transition: all 0.075s ease;
}

textarea {
  width: 100%;
  min-height: 15em;
}

.input-container {
  width: 650px;
  max-width: 100%;
  margin: 20px auto 25px auto;
}

.submit-btn {
  justify-self: center;
  align-self: center;
  margin-left: 43%;
  padding-left: 50px;
  padding-right: 50px;
  padding-top: 20px;
  padding-bottom: 20px;
  border-radius: 60px;
  display: inline-block;
  background-color: #00B6DC;
  color: white;
  font-size: 18px;
  cursor: pointer;
}

